# OpenGL

./: 1605103_2.cpp  CMakeLists.txt  bubbles.cpp  camera.cpp  demo.cpp  demo2.cpp  gun.cpp  util.h
Offline 3/: CMakeLists.txt  camera.cpp
Offline 3/headers/: 1605103_circle.h
Offline1-OpenGL/: 1605103_1.cpp  camera.cpp
Offline1-OpenGL/headers/: 1605103_gun.h
Offline2-Rasterization/: CMakeLists.txt  main.cpp
Offline2-Rasterization/headers/: 1605103_color.h  1605103_input_handler.h  1605103_matrix.h  1605103_triangle.h  1605103_util.h  1605103_vector.h  1605103_zbuffer.h
Offline3-Raytracing/: .gitignore  CMakeLists.txt  camera.cpp  main.cpp  sample2.cpp
Offline3-Raytracing/headers/: 1605103_bubble.h  1605103_camera.h  1605103_color.h  1605103_input_handler.h  1605103_matrix.h  1605103_objects.h  1605103_opengl_util.h  1605103_ray_tracing.h  1605103_triangle.h  1605103_util.h  1605103_vector.h  bitmap_image.h
Offline3-Raytracing/materials/: ambient-change.txt  diffuse-change.txt  specular-change.txt
headers/: 1605103_rectangle.h  1605103_rotation.h  bubble.h  camera.h  circle.h  gun.h  rectangle.h  util.h  vector.h
